- Fixed visual regression on check-in button spacing.

--- a/RockWeb/Styles/_checkin-core.less
+++ b/RockWeb/Styles/_checkin-core.less
@@ -283,11 +283,12 @@ body {
   padding: 0 0 @padding-base-vertical 0;
 }
 
-.checkin-search-actions{
+.checkin-search-actions {
   text-align: center;
   a {
+    width: 520px;
     max-width: 100%;
-    padding: 20px 200px;
+    padding: 20px;
     font-size: 48px;
     font-weight: @checkin-button-text-weight;
     line-height: 48px;
@@ -324,7 +325,6 @@ body {
 .checkin-actions {
   .btn {
     padding: 12px 24px;
-    margin-left: 12px;
     font-size: 22px;
     font-weight: @checkin-button-text-weight;
   }
